# vcforge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  release.yml  test.yml
docs/reference/: VCFv4.3.tex  VCFv4.4.tex  VCFv4.5.tex
docs/site/: index.md
docs/site/guide/: property-testing.md  vcfbuilder.md
docs/superpowers/plans/: 2026-05-30-vcfixture-phase2.md  2026-05-30-vcfixture.md  2026-05-30-vcforge-phase2.md  2026-05-30-vcforge.md  2026-06-01-compact-model-reprs.md  2026-06-02-docs-site.md  2026-06-02-symbolic-alleles.md  2026-06-02-vcf-version-conformance.md
docs/superpowers/specs/: 2026-05-30-vcfixture-design.md  2026-05-30-vcforge-design.md  2026-05-31-reference-consistent-documents-design.md  2026-06-01-compact-model-reprs-design.md  (+2 more)
skills/vcfixture/: SKILL.md
src/vcfixture/: __init__.py  _repr.py  _typing.py  allele.py  build.py  genotype.py  model.py  reference.py  serialize.py  strategies.py  truth.py  variants.py
src/vcforge/: __init__.py  build.py  genotype.py  io.py  model.py  reference.py  serialize.py  strategies.py  truth.py  variants.py
tests/: test_allele.py  test_benchmark.py  test_breakends.py  test_build.py  test_field_value.py  test_fielddef.py  test_genoray_parity.py  test_genotype.py  test_genotype_order.py  test_io.py  test_labels.py  test_matrix_roundtrip.py  test_model.py  test_number.py  test_public_api.py  test_reference.py  test_reference_roundtrip.py  test_repr.py  test_reserved.py  test_roundtrip.py  test_serialize.py  test_strategies.py  test_symbolic_build.py  test_symbolic_roundtrip.py  test_symbolic_serialize.py  test_symbolic_truth.py  test_truth.py  test_types.py  test_variants.py  test_version.py
(+11 files in other folders)
