[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcforge"
version = "0.1.0"
description = "Generate small VCF (v4.5) test data with decoded ground truth."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pysam>=0.22"]

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6.100", "cyvcf2>=0.30"]

[tool.hatch.build.targets.wheel]
packages = ["src/vcforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
