[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "vcfixture"
version = "0.3.0"
description = "Generate small VCF (v4.5) test data with decoded ground truth."
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pysam>=0.22", "hypothesis>=6.100"]

[dependency-groups]
dev = [
    "pytest>=8",
    "cyvcf2>=0.30",
    "ruff>=0.6",
    "pyrefly>=0.16",
    "commitizen>=3.29",
    "prek>=0.2",
]

[tool.uv.build-backend]
module-root = "src"
module-name = "vcfixture"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

# Type-safety is enforced on the shipped library (what py.typed promises
# consumers). Tests interrogate untyped third-party output (cyvcf2/numpy) and
# are exercised at runtime by pytest, so they are out of the type-check scope.
[tool.pyrefly]
project-includes = ["src"]
preset = "strict"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
update_changelog_on_bump = true
